<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue=""
        android:inputType="textCapWords"
        android:key="key_api_site"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/api_key"
        />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue=""
        android:inputType="textCapWords"
        android:key="server_site"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/address_server"
        />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="1"
        android:inputType="number"
        android:key="last_order_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/last_order"
        />

</PreferenceScreen>
