<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.redandspring.knocked.AboutActivity">

    <TextView
        android:id="@+id/about_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Knocked"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/autor_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_autor_text"
        android:layout_below="@+id/about_content"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/email_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_email_text"

        android:layout_below="@+id/autor_content"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
